// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default value 1`] = `
<div
  className="country-selector"
>
  <label>
    País
    <select
      onChange={[Function]}
      value="BRA"
    >
      <option
        value="BRA"
      >
        BRA
      </option>
      <option
        value="USA"
      >
        USA
      </option>
    </select>
  </label>
</div>
`;

exports[`show options 1`] = `
<div
  className="country-selector"
>
  <label>
    País
    <select
      onChange={[Function]}
      value=""
    >
      <option
        value="BRA"
      >
        BRA
      </option>
      <option
        value="USA"
      >
        USA
      </option>
    </select>
  </label>
</div>
`;
